<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_corner"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sub_failed_title"
        android:textColor="@color/text_color_main"
        android:textSize="@dimen/font_size_normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/sub_failed_reason1"
        android:textColor="@color/text_color_sub" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/sub_failed_reason2"
        android:textColor="@color/text_color_sub" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_normal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/confirm"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/dialog_confirm_selector"
            android:gravity="center"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_normal" />

    </LinearLayout>

</LinearLayout>