<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:background="@drawable/shape_corner"
    android:padding="@dimen/margin_medium">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip"
            android:textColor="#de000000"
            android:textSize="@dimen/font_size_huge" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/subs_success_tip"
            android:textColor="#8a000000"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_normal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ok"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/dialog_confirm_selector"
            android:gravity="center"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_normal" />

    </LinearLayout>
</RelativeLayout>