<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="312dp"
    android:layout_height="wrap_content"
    android:background="@drawable/common_rounded_corners_dialog_bg"
    android:orientation="vertical"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/update_version_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_marginTop="14dp"
        android:text="@string/upgrade_title"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/update_version_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_version_title"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_sub" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@id/update_version_content"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/update_version_close"
            android:layout_width="132dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginRight="@dimen/margin_medium"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:background="@drawable/common_gray_gradient_corner3"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/update_version_ok"
            android:layout_width="132dp"
            android:layout_height="@dimen/btn_height"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:background="@drawable/common_orange_gradient_corner3"
            android:text="@string/update_version_ok"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>