<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_year"
    android:layout_width="328dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_year_sub"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/gray_light_bg"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/iv_sub_year_marks"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/selected_dot" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/iv_sub_year_marks"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_sub_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:includeFontPadding="false"
                android:text="@string/sub_free"
                android:textColor="@color/orange_3"
                android:textSize="@dimen/font_size_normal"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/tv_sub_year_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:lines="2"
                android:text="@string/sub_year1"
                android:textColor="#4d000000"
                android:textSize="@dimen/font_size_small"
                app:autoSizeMaxTextSize="12sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="64dp"
        android:layout_height="24dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/sub_save_bg"
        android:gravity="center"
        android:includeFontPadding="false"
        android:lines="1"
        android:paddingLeft="3dp"
        android:paddingRight="2dp"
        android:text="@string/sub_year_save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="10sp"
        app:autoSizeMinTextSize="3sp"
        app:autoSizeTextType="uniform" />

</RelativeLayout>